--- a/app/views/evaluate_lecturers/index.html.erb
+++ b/app/views/evaluate_lecturers/index.html.erb
@@ -12,17 +12,19 @@
 <table>
   <tr class="toprow">
     <th>Student Name</th>
-    <th>Course Name</th>
+    <th>Course - Subject Name</th>
     <th>Evaluate Date</th>
     <th>Lecturer's Name</th>
-    <th colspan=3 class="ac"><%= t 'action' %></th>
+    <th colspan=4 class="ac"><%= t 'action' %></th>
     
   </tr>
 
 <% @evaluate_lecturers.each do |evaluate_lecturer| %>
   <tr>
 	<td><%= evaluate_lecturer.student_id.blank? ? "No Student" : evaluate_lecturer.studentevaluate.name %></td>
-	<td><%= evaluate_lecturer.course_id.blank? ? "No Course" : evaluate_lecturer.stucourse.programme_with_specialisation %></td>
+	<!--20Feb2013-subject added-->
+	<td><%= evaluate_lecturer.course_id.blank? ? "No Course" : evaluate_lecturer.stucourse.name+" - "+evaluate_lecturer.subjectevaluate.name %></td>
+	<!--20Feb2013-subject added-->
 	<td ><%= evaluate_lecturer.evaluate_date.blank? ? "-" : evaluate_lecturer.evaluate_date.strftime("%d %b %Y") %></td>
 	<td><%= evaluate_lecturer.staff_id.blank? ? "No Staff" : evaluate_lecturer.staffevaluate.staff_name_with_title %></td>
 	<td width=10px >
