--- a/app/views/average_lecturers/edit.html.erb
+++ b/app/views/average_lecturers/edit.html.erb
@@ -1,13 +1,12 @@
-<h3>New Data Analysis and Average Score</h3>
+<h3>Edit Data Analysis and Average Score</h3><!--20Feb2013-title changed-->
 
 <% form_for(@average_lecturer) do |f| %>
-  <%= f.error_messages %>
-
-<%=render :partial => 'form', :locals => {:f => f} %> 
-
-  <p>
-    <%= f.submit 'Update' %>
-  </p>
+  	<%= f.error_messages %>
+	<div class="tform"><!--20Feb2013-move div from partial-->
+		<%=render :partial => 'form_display', :locals => {:f => f} %> 
+		<%=render :partial => 'analysis_details', :locals => {:f => f} %>
+  		<p><%= f.submit 'Update' %></p>
+	</div><!--20Feb2013-move div from partial-->
 <% end %>
 
 <%= link_to 'Show', @average_lecturer %> |
