--- a/app/views/average_lecturers/index.html.erb
+++ b/app/views/average_lecturers/index.html.erb
@@ -11,7 +11,7 @@
     		<th>Lecturer Name</th>
 		    <th>Course Name</th>
 			<th>Subject Name</th>
-		    <th>Category Evaluate</th>
+		    <th>Evaluation Category</th><!--changed from evaluation category-->
     <th colspan=3 class="ac">Control</th>
   </tr>
 
@@ -19,8 +19,14 @@
 <tr>
 	 <td><%=h average_lecturer.lecturer.lecturer_evaluate %></td>
 	 <td><%=h average_lecturer.lecturer.course_evaluate %></td>
-	 <td></td>
-	 <td></td>
+	 <!--20Feb2013-subject added-->
+	 <td><%=h average_lecturer.lecturer.subject_evaluate%></td>
+     <!--20Feb2013-subject added-->
+	 <!--20Feb2013-changed from lesson_topic-->
+	 <td>
+		<%=h (AverageLecturer::CATEGORY.find_all{|disp, value| value == average_lecturer.evaluate_category.to_s}).map {|disp, value| disp} %>		
+	 </td>
+	 <!--20Feb2013-changed from lesson_topic-->
 	 <td width=10px ><%= link_to image_tag("printer.png", :border => 0, :title => 'BK-KKM-04-04'), :action => 'average_score', :id => average_lecturer %></td>
 	 <td width=10px ><%= link_to image_tag("document.png", :border => 0), :action => 'show', :id => average_lecturer %></td>	
      <td width=10px><%= link_to image_tag("edit.png", :border => 0), :action => 'edit', :id => average_lecturer %></td>	
