Card #28 - remove erroneous attr accessible (this is only for rails 3 or protected)

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -4,7 +4,7 @@
 		<tr>
 			<td class="leftcol"><%= t 'student.icno' %></td>
 			<td><b>:</b></td>
-			<td><%=h @student.formatted_mykad %></td>
+			<td><%=h check_kin {@student.formatted_mykad} %></td>
 			<td rowspan=10 align=right><% if @student.photo.exists? then %>
 			  <%= image_tag (@student.photo.url, :size => '150x200')%>
 			<% else %>
