--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -82,7 +82,7 @@
 			<tr>
 					<td class="leftcol"><label for="sbirthdt"><%= t 'student.dob' %></label><font color="red"> * </font></td>
 					<td><b>:</b></td>
-					<td><%= f.date_select :sbirthdt, :start_year => 1980, :end_year => 2012, :order => [:day, :month, :year], :include_blank => true %></td>
+					<td><%= f.date_select :sbirthdt, :start_year => 45.years.ago.year, :end_year => 15.years.ago.year, :order => [:day, :month, :year], :include_blank => true %></td>
 			</tr>
 			
 			<tr>
