--- a/app/views/grades/show.html.erb
+++ b/app/views/grades/show.html.erb
@@ -77,14 +77,14 @@
 	<tr>
 		<td class="leftcol"><label for="total_marks ">Final Score:</label></td>
 		<td><b>:</b></td>
-		<td><%=h @grade.finale %>% 
+		<td><%=h check_kin{@grade.finale} %>% 
 			  <font color=#AAA size=-2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				Total Marks Formative + Total Marks Summative </font></td>
 	</tr>
 	<tr>
 		<td class="leftcol"><label for="grade">Grade :</label></td>
 		<td><b>:</b></td>
-		<td><b><%=h @grade.grade_it %></b></td>
+		<td><b><%=h check_kin{@grade.grade_it} %></b></td>
 	</tr>
 	
 	<tr>
