--- a/app/views/grades/index.html.erb
+++ b/app/views/grades/index.html.erb
@@ -26,15 +26,15 @@
 	  <tr>
 	<% for grade in grades %>
 
-  <tr class="<%= (grade.set_row_color) %>">
+  <tr class="<%= (check_kin{grade.set_row_color}) %>">
     <td><%=h grade.student_details %></td>
     <td><%=h grade.subject_id.blank? ? "" : grade.subject_details %></td>
    <!-- <td><#%=h grade.sent_to_BPL %></td>-->
     <td><%=h grade.sent_date.blank? ? "-" : grade.sent_date.strftime("%d-%b-%Y") %></td>
     <td><%=h grade.total_formative %>%</td>
     <td><%=h grade.exam1marks %>%</td>
-    <td><%=h grade.finale %>% </td>
-    <td><%=h grade.grade_it %></td>
+    <td><%=h check_kin{grade.finale} %>% </td>
+    <td><%=h check_kin{grade.grade_it} %></td>
     <td width=10px ><%= link_to image_tag("document.png", :border => 0), :action => 'show', :id => grade %></td>
      <% if permitted_to? :update, grade %>
     <td width=10px><%= link_to image_tag("edit.png", :border => 0), :action => 'edit', :id => grade %></td><% end %>
