--- a/app/views/sdiciplines/_show_report_details.html.erb
+++ b/app/views/sdiciplines/_show_report_details.html.erb
@@ -39,7 +39,7 @@
 	<tr>
 		<td class="leftcol" colspan=2><label for="casedt">Date of Infraction</label></td>
 		<td><b>:</b></td>
-		<td><%=h @sdicipline.casedt.strftime("%d-%b-%Y - %I:%M %p") %></td>
+		<td><%=h check_kin{@sdicipline.casedt.strftime("%d-%b-%Y - %I:%M %p")} %></td>
 	</tr>
 	
 	<tr>
