--- a/app/views/staffs/show.html.erb
+++ b/app/views/staffs/show.html.erb
@@ -96,7 +96,7 @@
 		<tr>
 			<td class="leftcol" colspan=2><label for="phonehome"><%= t 'staff.phonehome' %></label></td>
 			<td><b>:</b></td>
-			<td><%=h @staff.phonehome %> heres some text</td>
+			<td><%=h @staff.phonehome %></td>
 		</tr>
 	
 		<tr>
