--- a/app/views/sdiciplines/show.html.erb
+++ b/app/views/sdiciplines/show.html.erb
@@ -1,5 +1,5 @@
 <div class="tform">
-	<%= render :partial => '_show_report_details' %>
+	<%= render :partial => 'show_report_details' %>
 <% if @sdicipline.warden_id == User.current_user.staff_id %>
 <H2>Action By Principal </H2>
 	<table width=100% border=0>
