added checker to ensure that login is associated with a staff account

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,9 +56,16 @@
 			<%= content_tag :div, msg, :id => key %>
 		<% end %>
 		<% if logged_in? %>
-	  <% if (request.request_uri == "/" || request.request_uri == "/home") %>  <!-- show only if at root -->
-			<%= render '/viewer/notifications' %>
-	  <% end %>
+      <% if current_user.staff_id.blank? && current_user.student_id.blank? %>
+      <%= render '/viewer/nostaff' %>
+      <% else %>
+    	  <% if (request.request_uri == "/" || request.request_uri == "/home") %>  <!-- show only if at root -->
+    			<%= render '/viewer/notifications' %>
+    	  <% end %>
+      <% end %>
+      
+      
+      
 	  <% end %>
 		<div>
 		<%= yield %>
