fix link to edit admin user

--- a/app/views/viewer/_nostaff.html.erb
+++ b/app/views/viewer/_nostaff.html.erb
@@ -1,11 +1,10 @@
 <div class="alert-box warning">
   <span>warning: </span><BR/>
   Your user account is currently not associated with and staff or student record.  
-    
-  
-  
-  <% if current_user.roles.include?(2) %>
-    Please click <%= link_to "here", :action => 'edit', :id => current_user %> to edit your account and associate a user.
+
+  <% if current_user.roles.map(&:authname).include?('administration') %>
+    Please click <%= link_to "here", :controller => "Users", :action => 'edit', :id => current_user %> 
+    to edit your account and associate a user.
   <% else %>
     Please contact your ICMS system administrator.<BR/>
     Below are a list of people authorised to do so:<BR/>
