Card #16 set default marks to 0 to allow saving without entering any data

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,11 +89,21 @@
 
 
 <div id='footer'>
-	  <p>©PLAMM | PUSAT LATIHAN DAN AKADEMI MARITIM MALAYSIA, AGENSI PENGUATKUASAAN MARITIM MALAYSIA
-	JABATAN PERDANA MENTERI,<BR>
-	SUNGAI ULAR, GEBENG,
-	26100 KUANTAN,
-	PAHANG DARUL MAKMUR.<BR>
+  <p> Akademi Maritim Sultan Haji Ahmad Shah (AMSAS),
+      Jabatan Penguatkuasaan Maritim Malaysia,
+      Jabatan Perdana Menteri,<BR>
+      Sungai Ular, Gebeng,
+      26100 Kuantan,
+      Pahang Darul Makmur.<BR>
+  
+  <!--
+  old address
+    <p>©PLAMM | PUSAT LATIHAN DAN AKADEMI MARITIM MALAYSIA, AGENSI PENGUATKUASAAN MARITIM MALAYSIA
+    JABATAN PERDANA MENTERI,<BR>
+    SUNGAI ULAR, GEBENG,
+    26100 KUANTAN,
+    PAHANG DARUL MAKMUR.<BR>-->
+  
 	Telefon: +609-5865244 Fax: +609-5865245 Web : www.mmea.gov.my <BR>
 	Paparan terbaik menggunakan Mozilla Firefox, Google Chrome dan Internet Explorer 9 dengan resolusi 1280 x 768</p>
  </div>
