--- a/public/stylesheets/ICMS.css
+++ b/public/stylesheets/ICMS.css
@@ -186,7 +186,8 @@ select {font-family: courier,serif; font-size: 12px;}
 			    text-align: center;
 			    font-size: 10px;
 			    color: white;
-			    font-weight:bold;
+			    /*font-weight:bold;*/
+          letter-spacing:1px;
 			    margin: 0;
 			    padding: 2px;
 			}
