--- a/app/views/ptschedules/_form.html.erb
+++ b/app/views/ptschedules/_form.html.erb
@@ -23,15 +23,13 @@
 		<td class="leftcol"><label for="ptcourse_id"><%= t 'ptcourse.duration' %></label></td>
 		<td width=2%><b>:</b></td>
 		<td><%= f.text_field :duration, :size=>5 %>
-		<%= f.select :duration_type, 
-			Ptcourse::DUR_TYPE, 
-			:prompt => "Select" %></td>
+		<%= f.select :duration_type, Ptschedule::DUR_TYPE, :prompt => "Select" %></td>
 	</tr>
 	
 	<tr>
 		<td class="leftcol"><label for="start"><%= t 'ptschedule.start' %> : </label></td>
 		<td width=2%><b>:</b></td>
-		<td><%= f.date_select :start, :start_year => 2012, :end_year => 2030, :include_blank => true %></td>
+		<td><%= f.date_select :start, :include_blank => true %></td>
 	</tr>
 	
 	<tr>
@@ -49,13 +47,14 @@
 	<tr>
 		<td class="leftcol"><label for="provider">Allowance Speaker</label></td>
 		<td width=2%><b>:</b></td>
-		<td><%= f.text_field :allowance_speaker, :size=>12, :placeholder => "RM" %> - <%= f.text_field :rate_speaker, :size=>5, :placeholder => "Hour" %> </td>
+		<td><%= f.text_field :allowance_speaker, :size=>12, :placeholder => "RM" %> / 
+    		<%= f.select :rate_speaker, Ptschedule::DUR_TYPE, :prompt => "Select" %></td>
 	</tr>
 	
 	<tr>
 		<td class="leftcol"><label for="provider">Meals & Hospitality</label></td>
 		<td width=2%><b>:</b></td>
-		<td><%= f.text_field :meals, :size=> 12, :placeholder => "RM" %></td>
+		<td><%= f.text_field :meals, :size=> 12, :placeholder => "RM" %> per pax per day</td>
 	</tr>
 	
 	
