--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -14,7 +14,7 @@
 			<th>Stock Name</th>
     		<th>Status</th>
 			<th>Approver</th>
-   			<th colspan=3 class="ac">Control</th>
+   			<th colspan=6 class="ac">Control</th>
   		</tr>
 
  
@@ -22,26 +22,32 @@
 <% @stocks.each do |stock| %>
   <tr>
 	<td><%=h stock.app_no %></td>
-	<td><%=h stock.applicant.staff_name_with_title %></td>
+	<td><%=h check_kin{stock.applicant.staff_name_with_title} %></td>
 	<td><%=h stock.app_date.strftime("%d %b %Y") unless stock.app_date.blank? %></td>
 	<td><% for stockdetail in stock.stockdetails %><%=h stockdetail.supplier.sub_category  %> / <%=h stockdetail.supplier.item_type  %> <% end %></td>
 	<td><%=h (Stock::STATUS.find_all{|disp, value| value == stock.status}).map {|disp, value| disp} %></td>
-	<td><%=h stock.approver.staff_name_with_title %></td>
+	<td><%=h check_kin{stock.approver.staff_name_with_title} %></td>
 	<td width=10px><% if stock.status != 1  %>
-	<%= link_to image_tag("printer.png", :border => 0, :title => 'KEW.PS 11'), :action => 'kewpa11', :id => stock %><% end %></td>
-    <td width=10px><%= link_to image_tag("document.png", :border => 0, :title => 'Show'), :action => 'show', :id => stock %></td>
-	<% if permitted_to? :approve, stock %><td width=10px>
-	<% if stock.approve_date == nil  %>
-	<%= link_to image_tag("approval.png", :border => 0, :title => 'Approval'), :action => 'approve', :id => stock %></td><% end %><% end %>
-	<% if permitted_to? :store, stock %>
-	<% if stock.status == 2%><td width=10px>
-	<%= link_to image_tag("approval.png", :border => 0, :title => 'update store'), :action => 'store', :id => stock %></td><% end %><% end %>
+	  <%= link_to image_tag("printer.png", :border => 0, :title => 'KEW.PS 11'), :action => 'kewpa11', :id => stock %><% end %></td>
+  <td width=10px><%= link_to image_tag("document.png", :border => 0, :title => 'Show'), :action => 'show', :id => stock %></td>
+  <td width=10px>
+	  <% if permitted_to? :approve, stock %>
+	    <% if stock.approve_date == nil  %>
+	      <%= link_to image_tag("approval.png", :border => 0, :title => 'Approval'), :action => 'approve', :id => stock %><% end %><% end %></td>
+  <td width=10px>
+	  <% if permitted_to? :store, stock %>
+	    <% if stock.status == 2 %>
+	      <%= link_to image_tag("approval.png", :border => 0, :title => 'update store'), :action => 'store', :id => stock %><% end %><% end %></td>
+  <td width=10px>
     <% if permitted_to? :update, stock %>
-	<% if stock.status == 4 || stock.status == 1  %>
-	<td width=10px><%= link_to image_tag("edit.png",     :border => 0, :title => 'Edit'), :action => 'edit', :id => stock %></td><% end %><% end%>
-	<% if permitted_to? :destroy, stock %>
-	<% if stock.approve_date == nil  %>
-	<td width=10px><%= link_to image_tag("delete.png",   :border => 0, :title => 'Delete'), stock, :confirm => 'Are you sure?', :method => :delete %></td><% end %><% end %>
+	    <% if stock.status == 4 || stock.status == 1  %>
+	      <%= link_to image_tag("edit.png",     :border => 0, :title => 'Edit'), :action => 'edit', :id => stock %><% end %><% end%></td>
+  <td width=10px>
+	  <% if permitted_to? :destroy, stock %>
+	    <% if stock.approve_date == nil  %>
+	      <%= link_to image_tag("delete.png",   :border => 0, :title => 'Delete'), stock, :confirm => 'Are you sure?', :method => :delete %>
+      <% end %>
+    <% end %></td>
   </tr>
 <% end %>
 </table>
